--- a/src/assets/sass/settings/_variables.scss
+++ b/src/assets/sass/settings/_variables.scss
@@ -3,10 +3,10 @@
 $font: 'Raleway', sans-serif;
 
 /* default color skin */
-$skin-color: #e74c3c;
+$skin-color: #3ab0e4;
 
 /* default color skin 2 */
-$skin-color2: #9e2114;
+$skin-color2: #0384ce;
 
 /* background grey, headings text color*/
 $skin-color3: #3a3d41;
