--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,4 +1,190 @@
 ---
-title: Home
+title: Startseite
 ---
-<h1>startseite</h1>
+<!-- slider
+			================================================== -->
+<div id="slider" class="slider3">
+    <div class="tp-banner-container">
+        <div class="tp-banner">
+            <ul>
+                <!-- SLIDE  -->
+                <li data-transition="curtain-1" data-slotamount="7" data-masterspeed="600">
+                    <!-- MAIN IMAGE -->
+                    <img src="assets/images/za-team-bg-1920x1080.jpg" style='background-color:#b2c4cc' alt=""
+                         data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
+                    <!-- LAYERS -->
+                    <!-- LAYER NR. 1 -->
+                    <div class="tp-caption large_bold_grey skewfromrightshort customout"
+                         data-x="150"
+                         data-y="83"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="500"
+                         data-start="1200"
+                         data-easing="Back.easeOut"
+                         data-endspeed="500"
+                         data-endeasing="Power4.easeIn"
+                         data-captionhidden="on"
+                         style="z-index: 4">
+                        <span>Zahnarztpraxis</span> Levetzowstraße 25 10555 Berlin
+                        <br/>
+                        <span>+49 30 391 67 25</span>
+                    </div>
+
+                    <!-- LAYER NR. 2 -->
+                    <div class="tp-caption medium_thin_grey customin ltl"
+                         data-x="110"
+                         data-y="260"
+                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
+                         data-speed="1000"
+                         data-start="1500"
+                         data-easing="Back.easeInOut"
+                         data-endspeed="400"
+                         data-endeasing="Back.easeIn"
+                         style="z-index: 14">
+                        Hallo liebe Gäste, wir freuen uns Sie begrüßen zu dürfen und dass Sie auf unserer Internetseite
+                        vorbei schauen.
+                    </div>
+
+                    <!-- LAYER NR. 3 -->
+                    <div class="tp-caption customout lfb"
+                         data-x="230"
+                         data-y="350"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="500"
+                         data-start="2500"
+                         data-easing="Back.easeOut"
+                         data-endspeed="500"
+                         data-endeasing="Power4.easeIn"
+                         data-captionhidden="on"
+                         style="z-index: 9">
+                        <img src="assets/images/za-team-fr-751x391.png" alt="Team Awerkow Zahnarztpraxis">
+                    </div>
+                </li>
+                <!-- SLIDE  -->
+                <li data-transition="flyin" data-slotamount="7" data-masterspeed="800">
+                    <!-- MAIN IMAGE -->
+                    <img src="assets/images/za-team-bg-1920x1080.jpg" style='background-color:#b2c4cc' alt=""
+                         data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
+                    <!-- LAYERS -->
+
+                    <!-- LAYER NR. 1 -->
+                    <div class="tp-caption skewfromrightshort customout"
+                         data-x="100"
+                         data-y="120"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="500"
+                         data-start="1200"
+                         data-easing="Back.easeOut"
+                         data-endspeed="500"
+                         data-endeasing="Power4.easeIn"
+                         data-captionhidden="on"
+                         style="z-index: 9">
+                        <img src="assets/images/za-entrance-500x500.jpg" alt="Eingang Zahnarztpraxis">
+                    </div>
+
+                    <!-- LAYER NR. 2 -->
+                    <div class="tp-caption large_bold_grey skewfromrightshort customout"
+                         data-x="680"
+                         data-y="120"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="500"
+                         data-start="1800"
+                         data-easing="Back.easeOut"
+                         data-endspeed="500"
+                         data-endeasing="Power4.easeIn"
+                         data-captionhidden="on"
+                         style="z-index: 4">
+                        Wir sind immer
+                        <br/>
+                        für Sie da
+                    </div>
+
+                    <!-- LAYER NR. 3 -->
+                    <div class="tp-caption medium_thin_grey customin ltl"
+                         data-x="750"
+                         data-y="250"
+                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
+                         data-speed="1000"
+                         data-start="2100"
+                         data-easing="Back.easeInOut"
+                         data-endspeed="400"
+                         data-endeasing="Back.easeIn"
+                         style="z-index: 14">
+                        Zahnarztpraxis Wadim Awerkow
+                        <br/>
+                        Levetzowstraße 25 10555 Berlin
+                        <br/>
+                        Telefon: 030 391 67 25
+                        <br/>
+                        Telefax: 030 392 17 48
+                        <br/>
+                        <a href="mailto:info@zahnarzt-awerkow.de">E-Mail: info@zahnarzt-awerkow.de</a>
+                    </div>
+
+                    <!-- LAYER NR. 4 -->
+                    <div class="tp-caption medium_thin_grey customin ltl"
+                         data-x="820"
+                         data-y="560"
+                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
+                         data-speed="1000"
+                         data-start="2500"
+                         data-easing="Back.easeInOut"
+                         data-endspeed="400"
+                         data-endeasing="Back.easeIn"
+                         style="z-index: 14"><a class="button-large" href="#">Kontakt</a>
+                    </div>
+                </li>
+                <!-- SLIDE  -->
+                <!--<li data-transition="3dcurtain-horizontal" data-slotamount="7" data-masterspeed="500">
+                    &lt;!&ndash; MAIN IMAGE &ndash;&gt;
+                    <img src="assets/images/za-team-bg-1920x1080.jpg" alt="slidebg1" data-bgfit="cover"
+                         data-bgposition="left top" data-bgrepeat="no-repeat">
+                    &lt;!&ndash; LAYERS &ndash;&gt;
+
+                    &lt;!&ndash; LAYER NR. 1 &ndash;&gt;
+                    <div class="tp-caption large_bold_grey skewfromrightshort customout"
+                         data-x="280"
+                         data-y="274"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="500"
+                         data-start="1200"
+                         data-easing="Back.easeOut"
+                         data-endspeed="500"
+                         data-endeasing="Power4.easeIn"
+                         data-captionhidden="on"
+                         style="z-index: 4">welcome to our agency
+                    </div>
+
+                    &lt;!&ndash; LAYER NR. 2 &ndash;&gt;
+                    <div class="tp-caption medium_thin_grey customin ltl"
+                         data-x="200"
+                         data-y="340"
+                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
+                         data-speed="1000"
+                         data-start="1500"
+                         data-easing="Back.easeInOut"
+                         data-endspeed="400"
+                         data-endeasing="Back.easeIn"
+                         style="z-index: 14">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio.
+                        Quisque volutpat mattis eros.
+                    </div>
+
+                    &lt;!&ndash; LAYER NR. 3 &ndash;&gt;
+                    <div class="tp-caption medium_thin_grey customin ltl"
+                         data-x="500"
+                         data-y="400"
+                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
+                         data-speed="1000"
+                         data-start="2000"
+                         data-easing="Back.easeInOut"
+                         data-endspeed="400"
+                         data-endeasing="Back.easeIn"
+                         style="z-index: 14"><a class="button-large" href="#">get started</a>
+                    </div>
+                </li>-->
+            </ul>
+            <div class="tp-bannertimer"></div>
+        </div>
+    </div>
+</div>
+<!-- End slider -->
