--- a/src/templates/partials/footer-js.hbs
+++ b/src/templates/partials/footer-js.hbs
@@ -5,8 +5,8 @@ component: footer-js
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 <!-- ToDo: add to the concat -->
-<script type="text/javascript" src="assets/js/jquery.themepunch.plugins.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.themepunch.revolution.min.js"></script>
+<!--<script type="text/javascript" src="assets/js/jquery.themepunch.plugins.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery.themepunch.revolution.min.js"></script>-->
 
 <script type="text/javascript" src="assets/js/main.js"></script>
 
@@ -23,7 +23,7 @@ component: footer-js
                     fullWidth: "on",
                     forceFullWidth: "on",
                     navigationType: "off",
-                    navigationArrows: "solo",
+                    navigationArrows: "none",
                     onHoverStop: "off",
                     navigationVOffset: 60,
                     hideThumbsOnMobile: "on",
