--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -8,10 +8,7 @@ component: footer
         <ul class="social-icons triggerAnimation animated" data-animate="tada">
             <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
             <li><a class="google" href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a></li>
         </ul>
     </div>
     <div class="up-footer">
@@ -20,13 +17,10 @@ component: footer
 
                 <div class="col-md-3">
                     <div class="widget footer-widget text-widget">
-                        <h1>About</h1>
-
-                        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-
-                        <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
-                            quis enim. </p>
-                        <img src="images/footer-logo.png" alt="">
+                        <h1>Zahnarztpraxis</h1>
+                        <p>Hallo liebe Gäste, wir freuen uns Sie begrüßen zu dürfen und dass Sie auf unserer Internetseite vorbei schauen.</p>
+                        <p>Hier können Sie mehr erfahren und hoffentlich alle Ihre Fragen in Bezug auf einzelne / bestimmte Behandlungen, sowie über unser Team, beantworten.</p>
+                        <img alt="Logo Zahnarzt Awerkow" src="assets/images/za-logo-white.svg" width="118" height="31">
                     </div>
                 </div>
 
@@ -84,7 +78,7 @@ component: footer
 
             </div>
             <div class="footer-line">
-                <p>Copyright 2014. "marble" by UpiFix. All rights reserved.</p>
+                <p>Zahnarzt Wadim Awerkow, Levetzowsraße 25 10555 Berlin. COPYRIGHT © 2015 <a href="mailto:dmitri.awerkow@gmail.com">Dmitri Awerkow</a></p>
             </div>
         </div>
     </div>
