added contact page added imprint page

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -2701,7 +2701,7 @@ ul.team-social {
 /* =  contact
 /*-------------------------------------------------*/
 .contact-page-banner {
-    background: url('http://placehold.it/1920x156');
+    background: url('../images/za-contact-bg-1920x156.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
