--- a/src/templates/partials/header-section.hbs
+++ b/src/templates/partials/header-section.hbs
@@ -20,7 +20,7 @@ component: header
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
-                    <li><a href="shortcodes.html">Impressum</a></li>
+                    <li><a href="impressum.html">Impressum</a></li>
                     <li class="drop"><a href="#" class="open-search"><i class="fa fa-search"></i></a>
                         <form class="form-search">
                             <input type="search" placeholder="Search:"/>
