--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,8 +1,7 @@
 ---
 title: Startseite
 ---
-<!-- slider
-			================================================== -->
+<!-- slider -->
 <div id="slider" class="slider3">
     <div class="tp-banner-container">
         <div class="tp-banner">
