added new features

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -927,7 +927,7 @@ a.button-third:hover {
         background: $white;
     }
     .features-box {
-        background: url('http://placehold.it/1920x1080');
+        background: url('../images/za-succes-1980x1080.jpg');
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -2911,7 +2911,7 @@ ul.team-social {
 /*-------------------------------------------------*/
 
 .faqs-page-banner {
-    background: url('http://placehold.it/1920x156');
+    background: url('../images/za-imprint-bg-1920x156.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
