--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -187,3 +187,213 @@ title: Startseite
     </div>
 </div>
 <!-- End slider -->
+
+<!-- features-section2 -->
+<div class="section-content features-section2">
+    <div class="title-section">
+        <div class="container triggerAnimation animated" data-animate="bounceIn">
+            <h1>Öffnungszeiten</h1>
+            <p>030 391 67 25, Levetzowstraße 25 10555 Berlin</p>
+        </div>
+    </div>
+    <div class="features-box parallax" data-stellar-background-ratio="0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <ul class="feature-list2 triggerAnimation animated" data-animate="slideInLeft">
+                        <li>
+                            <span><i class="fa fa-clock-o"></i></span>
+                            <div class="list-cont">
+                                <h3>Montag</h3>
+                                <p>9 - 13 Uhr 14 - 19 Uhr</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-clock-o"></i></span>
+                            <div class="list-cont">
+                                <h3>Dienstag</h3>
+                                <p>9 - 13 Uhr 14 - 19 Uhr</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="feature-list2 triggerAnimation animated" data-animate="slideInDown">
+                        <li>
+                            <span><i class="fa fa-clock-o"></i></span>
+                            <div class="list-cont">
+                                <h3>Mittwoch</h3>
+                                <p>14 - 19 Uhr</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-clock-o"></i></span>
+                            <div class="list-cont">
+                                <h3>Donnerstag</h3>
+                                <p>9 - 13 Uhr 14 - 19 Uhr</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="feature-list2 triggerAnimation animated" data-animate="slideInRight">
+                        <li>
+                            <span><i class="fa fa-clock-o"></i></span>
+                            <div class="list-cont">
+                                <h3>Freitag</h3>
+                                <p>9 - 13 Uhr</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-calendar"></i></span>
+                            <div class="list-cont">
+                                <h3>... und nach Vereinbahrung</h3>
+                                <p>
+                                    Telefon: +49 30 391 67 25 <br/>
+                                    E-Mail: info@zahnarzt-awerkow.de
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="image-place triggerAnimation animated" data-animate="slideInUp">
+            <div class="container">
+                <img src="../assets/images/za-reception-503x312.jpg" alt="Foto Öffnungszeiten">
+            </div>
+        </div>
+    </div>
+</div>
+{{! Skills section}}
+<div class="section-content features-section2">
+    <div class="title-section white">
+        <div class="container triggerAnimation animated" data-animate="bounceIn">
+            <h1>Unsere Leistungen</h1>
+            <p>Das Leistungsspektrum unserer Praxis</p>
+        </div>
+    </div>
+    <div class="features-box features-box-services parallax" data-stellar-background-ratio="0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <ul class="feature-list2 triggerAnimation animated" data-animate="slideInLeft">
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+                            <div class="list-cont">
+                                <h3>Ästhetische Zahnheilkunde</h3>
+                                <p>Kosmetische Frontzahn-Korrekturen, Veneers. Mit Zahndefekten im Frontzahnbereich müssen Sie sich nicht länger abfinden, denn diese können in den meisten Fällen sehr gut korrigiert werden.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+                            <div class="list-cont">
+                                <h3>Allergiefreier Zahnersatz </h3>
+                                <p>Bioverträgliche Legierungen, Vollkeramiken-metallfrei</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+
+                            <div class="list-cont">
+                                <h3>Laserbehandlung</h3>
+                                <p>
+                                    Durch einen Laser kann Karies entfernt werden. Da der Laser gepulst ist und die einzelnen Pulse kurz sind,
+                                    kann der Nerv den Reiz nicht wahrnehmen. Auch gegen Parodontitis lässt sich der Laser einsetzen, nicht jedoch gegen Zahnstein.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+                            <div class="list-cont">
+                                <h3>Funktionsstörungen im Kiefergelenk Bereich</h3>
+                                <p>
+                                    Das Kiefergelenk verbindet den Unterkiefer beweglich mit dem übrigen
+                                    Gesichtsschädel. Zusammen mit den Zähnen und der Kaumuskulatur ist es ein Teil des
+                                    Funktionskreises, der in abgestimmter Weise die Bewegungen des Kiefers beim Kauen,
+                                    Schlucken und Sprechen harmonisch steuert. Störungen der Funktion des Kiefergelenkes
+                                    können sich in Einschränkungen der Beweglichkeit und Schmerzen äußern.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+
+                            <div class="list-cont">
+                                <h3>Behandlung für Angstpatienten.</h3>
+                                <p>
+                                    Fast alle Menschen haben eine natürliche Scheu und deutliches Unbehagen vor einer Zahnbehandlung.
+                                    Wir in unserem Zahnarztpraxis lassen Sie nicht allein!
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <div class="image-place triggerAnimation animated" data-animate="slideInUp">
+                        <img src="../assets/images/za-services-330x440.jpg" alt="Foto Unsere Leistungen">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <ul class="feature-list2 triggerAnimation animated" data-animate="slideInRight">
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+                            <div class="list-cont">
+                                <h3>Parodontosebehandlung</h3>
+                                <p>
+                                    Eine rechtzeitige und richtige Behandlung der Parodontitis ist überaus wichtig. Wird
+                                    die Parodontitis nicht richtig behandelt, kann Zahnverlust – mit ästhetischen und
+                                    funktionellen Beeinträchtigungen – die Folge sein.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+                            <div class="list-cont">
+                                <h3>Implantologie</h3>
+                                <p>
+                                    Ein Zahnimplantat ist ein in den Kieferknochen eingesetztes „alloplastisches Konfektionsteil“ (Implantat).
+                                    Das Teilgebiet der Zahnheilkunde, das sich mit der Insertion (Einsetzen) von
+                                    Zahnimplantaten in den Kieferknochen befasst, wird als Implantologie bezeichnet.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+                            <div class="list-cont">
+                                <h3>Individualprophylaxe</h3>
+                                <p>Die Individualprophylaxe ist der Überbegriff für durch den Zahnarzt erbrachte prophylaktische Maßnahmen am einzelnen Patienten.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+
+                            <div class="list-cont">
+                                <h3>Digitales Röntgen</h3>
+                                <p>
+                                    Beim digitalen Röntgen, handelt es sich um
+                                    ein Verfahren zur Aufzeichnung, Darstellung und Bearbeitung von Röntgenaufnahmen
+                                    mittels elektronischer Datenverarbeitung.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span><i class="fa fa-plus-square"></i></span>
+
+                            <div class="list-cont">
+                                <h3>Zahnersatz in einer Sitzung – CEREC-Verfahren</h3>
+                                <p>
+                                    CEREC (Chairside Economical Restoration of Esthetic Ceramics oder CEramic
+                                    REConstruction) ist eine CAD/CAM-Methode zur Rekonstruktion von Zahnrestaurationen,
+                                    die 1980 von W. Mörmann und M. Brandestini an der Universität Zürich entwickelt
+                                    wurde.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
