--- a/src/templates/partials/footer-js.hbs
+++ b/src/templates/partials/footer-js.hbs
@@ -3,14 +3,7 @@ component: footer-js
 ---
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-
-<!-- ToDo: add to the concat -->
-<!--<script type="text/javascript" src="assets/js/jquery.themepunch.plugins.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.themepunch.revolution.min.js"></script>-->
-
 <script type="text/javascript" src="assets/js/main.js"></script>
-
-<!-- THE SCRIPT INITIALISATION -->
 <script type="text/javascript">
     var revapi;
     jQuery(document).ready(function() {
@@ -31,7 +24,25 @@ component: footer-js
                     hideArrowsOnMobile: "on"
                 });
     });
-
 </script>
-
-<!-- END REVOLUTION SLIDER -->
+<script type="text/javascript">
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-42609202-1', 'auto');
+    ga
+    ('send',
+            {
+                'hitType': 'pageview',
+                'page': '{{pagename}}',
+                'title': '{{title}}'
+            }
+);</script>
