--- a/src/templates/pages/contact.hbs
+++ b/src/templates/pages/contact.hbs
@@ -23,7 +23,7 @@ title: Kontaktseite
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="#"><i class="fa fa-map-marker"></i></a>
+                        <a href="https://www.google.de/maps/place/Levetzowstra%C3%9Fe+25,+10555+Berlin/@52.52276,13.33106,17z/data=!3m1!4b1!4m2!3m1!1s0x47a8510e23748ba1:0x4884b6cad3e9b7ce" target="_blank"><i class="fa fa-map-marker"></i></a>
 
                         <h2>Adresse</h2>
 
@@ -32,18 +32,18 @@ title: Kontaktseite
                             <span>10555 Berlin</span>
                         </p>
                     </div>
-                    <div class="col-md-4">
-                        <a href="#"><i class="fa fa-phone"></i></a>
-
+                    <div class="col-md-4 contact-info--telephone">
+                        <a href="tel: +49 30 391 67 25">
+                            <i class="fa fa-phone"></i>
+                        </a>
                         <h2>Telephone</h2>
-
                         <p>
                             <span>Tel: +49 30 391 67 25</span>
                             <span>Fax: +49 30 392 17 48</span>
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <a href="#"><i class="fa fa-envelope-o"></i></a>
+                        <a href="mailto: info@zahnarzt-awerkow.de"><i class="fa fa-envelope-o"></i></a>
 
                         <h2>E-mail</h2>
 
