--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -130,7 +130,7 @@ title: Startseite
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14"><a class="button-large" href="#">Kontakt</a>
+                         style="z-index: 14"><a class="button-large" href="contact.html">Kontakt</a>
                     </div>
                 </li>
             </ul>
