--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -5,11 +5,13 @@ component: footer
 			================================================== -->
 <footer>
     <div class="social-section">
+        {{! ToDo: create Social Pages
         <ul class="social-icons triggerAnimation animated" data-animate="tada">
             <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a class="google" href="#"><i class="fa fa-google-plus"></i></a></li>
         </ul>
+        }}
     </div>
     <div class="up-footer">
         <div class="container">
