added performance optimizing

--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -6,10 +6,9 @@ component: head tag
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="google-site-verification" content="gEdviGPhLcb-Itou1mowgEpmDg26XSs-lhfviEYCklc">
-
 <meta name="description" content="Zahnarztpraxis in Berlin, Zahnarzt in Berlin Mitte, Wadim Awerkow, Levetzowstraße 25 10555 Berlin, 030 391 67 25">
 <meta name="keywords" content="Zahnarzt, Zahnarzt Berlin, Zahnärzte Berlin, Zahnarztpraxis Berlin, Zahnarzt Berlin Mitte, Zahnklinik Berlin, Kinderzahnarzt Berlin, Zahnbehandlung, Zahnschmerzen, Wadim Awerkow, Levetzowstraße 25, Awerkow, Levetzowstraße">
 
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,300,100,200' rel='stylesheet' type='text/css'>
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/main.css" media="screen">
+<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,300,100,200'>
+<link rel='stylesheet' type='text/css' href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+<link rel='stylesheet' type="text/css" href="assets/css/main.css" media="screen">
