added small performance optimization

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -49,8 +49,10 @@
 }
 
 /*-------------------------------------------------*/
-/* =  import variables.less file
+/* =  import variables.scss file and font awesome
 /*-------------------------------------------------*/
+@import "font-awesome-compass";
+@import "font-awesome";
 @import "settings/variables";
 
 /*-------------------------------------------------*/
