--- a/src/templates/partials/footer-js.hbs
+++ b/src/templates/partials/footer-js.hbs
@@ -3,6 +3,21 @@ component: footer-js
 ---
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+{{! include asynchron google font load}}
+<script type="text/javascript">
+    WebFontConfig = {
+        google: { families: [ 'Raleway:400,500,600,700,300,100,200'] }
+    };
+    (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+    })();
+</script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 <script type="text/javascript">
     var revapi;
