added alt tag for image

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -9,7 +9,7 @@ title: Startseite
                 <!-- SLIDE  -->
                 <li data-transition="curtain-1" data-slotamount="7" data-masterspeed="600">
                     <!-- MAIN IMAGE -->
-                    <img src="assets/images/za-team-bg-1920x1080.jpg" style='background-color:#b2c4cc' alt=""
+                    <img src="assets/images/za-team-bg-1920x1080.jpg" style='background-color:#b2c4cc' alt="Zahnarztpraxis Team"
                          data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
                     <!-- LAYERS -->
                     <!-- LAYER NR. 1 -->
@@ -62,7 +62,7 @@ title: Startseite
                 <!-- SLIDE  -->
                 <li data-transition="flyin" data-slotamount="7" data-masterspeed="800">
                     <!-- MAIN IMAGE -->
-                    <img src="assets/images/za-team-bg-1920x1080.jpg" style='background-color:#b2c4cc' alt=""
+                    <img src="assets/images/za-team-bg-1920x1080.jpg" style='background-color:#b2c4cc' alt="Zahnarztpraxis Team"
                          data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
                     <!-- LAYERS -->
 
